<resources>
    <string name="app_name">NewSongs</string>

    <!-- FirstUseActivity -->
    <string name="lblinscription">Je m\'inscris</string>
    <string name="lblconnecte">Je me connecte</string>
    <string name="lblconnectwithdeezer">Je me connecte avec Deezer</string>

    <!-- RegisterActivity -->
    <string name="hintPseudo">Pseudo</string>
    <string name="hintEmail">Email</string>
    <string name="hintPrenom">Prenom</string>
    <string name="hintNom">Nom</string>
    <string name="hintMdp">Mot de passe</string>
    <string name="hintVilleResidence">Ville de résidence</string>

    <!-- MainActivity-->
    <string name="back"><![CDATA[>]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contentDescriptionImage">background</string>
    <string name="no_connection">Veuillez vous connecter à Internet et redémarrer l\'appli !</string>
    <string name="no_friends">Bienvenue sur l\'application :)\nAjoute des amis pour profiter de l\'appli :) </string>
    <string name="no_playlists">Il n\'a pas de playlists à afficher.\nDemandez à vos amis de publier :)</string>
</resources>
