<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    tools:context="newsongs.fr.newsongs.Activities.FirstUseActivity"
    android:background="@drawable/background_first_use">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical"
        >


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnConnectDezeer"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/lblconnectwithdeezer" />

        <Button
            android:id="@+id/btnInscription"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/lblinscription" />

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/lblconnecte" />
    </LinearLayout>

</LinearLayout>
