<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".Activities.FirstUseActivity"
    android:background="@android:color/darker_gray">

    <ImageButton
        android:id="@+id/btnCloseDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:contentDescription="close"
        android:src="@android:drawable/btn_dialog" />

    <EditText
        android:id="@+id/txtPseudo"
        android:layout_below="@+id/btnCloseDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPseudo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtMotDePasse"
        android:layout_below="@+id/txtPseudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintMdp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnConnect2"
        android:layout_below="@+id/txtMotDePasse"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblconnecte" />

</RelativeLayout>